Fixed layout issues

--- a/src/css/Account.css
+++ b/src/css/Account.css
@@ -17,6 +17,8 @@
     #f03bf0,
     #f11ff1
   );
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .account-main-container .container {
